modified:   AndroidManifest.xml 	modified:   bin/AndroidManifest.xml 	modified:   bin/FilePlore.apk 	modified:   bin/classes.dex 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$2.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$MyHandler.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/MainActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/NetActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/NetActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$2.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$3.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter$ViewHolder.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$myItemListener.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/SambaActivity$FileListAdapter.class 	modified:   bin/classes/com/changhong/fileplore/activities/SambaActivity.class 	modified:   bin/classes/com/changhong/fileplore/adapter/GridAdapter.class 	modified:   bin/classes/com/changhong/fileplore/adapter/ListAdapter.class
	modified:   bin/classes/com/changhong/fileplore/adapter/PhotoGirdAdapter.class
	modified:   bin/classes/com/example/fileplore/R$drawable.class
	modified:   bin/classes/com/example/fileplore/R$id.class
	modified:   bin/class

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,5 @@
      <string name="localfile">本地文件</string>
       <string name="netfile">网络文件</string>
        <string name="sambafile">Samba文件</string>
-
+ <string name="current_net">当前网络中的设备：</string>
 </resources>
