--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,8 +22,10 @@
     <string name="notuse_capacity">可用 : </string>
     <string name="netshare">网络共享 : </string>
     <string name="reseach">刷新</string>
-     <string name="localfile">本地文件</string>
-      <string name="netfile">网络文件</string>
-       <string name="sambafile">Samba文件</string>
- <string name="current_net">当前网络中的设备：</string>
+    <string name="localfile">本地文件</string>
+    <string name="netfile">网络文件</string>
+    <string name="sambafile">Samba文件</string>
+    <string name="current_net">当前网络中的设备：</string>
+    <string name="wait">请稍等</string>
+
 </resources>
