--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="sambafile">Samba文件</string>
     <string name="current_net">当前网络中的设备：</string>
     <string name="wait">请稍等</string>
+    <string name="downlist">下载列表 : </string>
 
 </resources>
