--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="localfile">本地文件</string>
     <string name="netfile">网络文件</string>
     <string name="sambafile">Samba文件</string>
+       <string name="sharefile">已共享文件</string>
     <string name="current_net">当前网络中的设备：</string>
     <string name="wait">请稍等</string>
     <string name="downlist">下载列表 : </string>
@@ -45,8 +46,9 @@
     <string name="msg_default_meta">元数据</string>
     <string name="msg_default_time">时间</string>
     <string name="msg_default_type">类型</string>
- <string name="server_url">服务器地址 ：</string>
-  <string name="password">密码 ：</string>
-   <string name="username">用户名 ：</string>
+    <string name="server_url">服务器地址 ：</string>
+    <string name="password">密码 ：</string>
+    <string name="username">用户名 ：</string>
     <string name="folder">文件夹 ：</string>
+
 </resources>
